fdo#77537: Exporting font names in edit text needs special handling.

Change-Id: Ia9c29d37eaf962e0245920e50f534dd779af72dc